[package]
name = "rust_rve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[profile.dev]
panic = "abort"
overflow-checks = false
# opt-level = 1           # Use slightly better optimizations.

[profile.release]
panic = "abort"
overflow-checks = false
debug = true
